Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container-proyectos">
         <div id="card" class="glowAnimation">
         <div class="card-img-wrapper">
-            <img src="../IMG/image.png" alt="Proyecto" class="card-img">
+            <img src="image.png" alt="Proyecto" class="card-img">
         </div>
     <div class="card-content">
     <h3>Web Repair Services</h3>
@@ -76,7 +76,7 @@
         </div>
         <div id="card" class="glowAnimation">
         <div class="card-img-wrapper">
-            <img src="../IMG/image.png" alt="Proyecto" class="card-img">
+            <img src="image.png" alt="Proyecto" class="card-img">
         </div>
     <div class="card-content">
     <h3>Web Repair Services</h3>
@@ -95,7 +95,7 @@
         </div>
         <div id="card" class="glowAnimation">
         <div class="card-img-wrapper">
-            <img src="../IMG/image.png" alt="Proyecto" class="card-img">
+            <img src="image.png" alt="Proyecto" class="card-img">
         </div>
     <div class="card-content">
     <h3>Web Repair Services</h3>
@@ -189,4 +189,5 @@
 <canvas id="stars"></canvas>
 <script src="script.js"></script>
 </body>
+
 </html>
